bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:2: error: illegal start of simple expression
  if (((a<0 || b<0) && !negatif) || (a<0 && b<0) && negatif)){
                                                            ^